# gen-ai-apps

./: README.md  test.py
.devcontainer/: devcontainer.json
Academic-Assistant/: requirements.txt
AlwaysWithYou_Chatbot/: main.py
Audio-transcriber-streamlit-hackathon/: main.py  streamlit_hackathon.json  transcript_and_keywords.txt
AyurVaidyabot/: main.py  utils.py
Ben-Form10K-Benchmarking-Agent/: app.py
CSV_AI/: README.md  app.py
ChatGdrive/: .pre-commit-config.yaml  app.py
ChatResume.AI/: requirements.txt  workable.txt  workable_web.txt
ChatWithYoutube/: app.py
Chat_with_X/: langchain_tools.py
ClipInsight/: README.md  aai.py  app.py  requirements.txt
CosmaNeura-Med-Billing/: README.md  test_billing.py
Dashboard-Trader/: README.md  _secret_auth_.json  code.py  descarga.py  generate_keys.py  graficos.py  hashed_pw.pkl  indicador  main.py  nohup.out  requirements.txt  textos.py
EmoPulse/: README.md  app.py  (+1 more)
mlb-stats-chatbot/: README.md  main.py  old.py  pyproject.toml
socrates-v2/: Makefile  README.md  pyproject.toml
socrates-v2/.devcontainer/: devcontainer.json
socrates-v2/socrates_v2/: ai.py  app.py
socrates-v2/test/: test_noop.py
vector-librarian-llm-hackaton/: LICENSE  pyproject.toml  requirements.txt
vector-librarian-llm-hackaton/.devcontainer/: devcontainer.json
vector-librarian-llm-hackaton/vector_librarian/: Information.py  client.py
vector-librarian-llm-hackaton/vector_librarian/backend/: arxiv_module.py  ingestion.py  retrieval.py  vector_db.py
vector-librarian-llm-hackaton/vector_librarian/pages/: 2_Ingestion.py  3_Retrieval.py
(+868 files in other folders)
