[tool.poetry]
name = "socrates-v2"
version = "0.1.0"
description = ""
authors = ["AJ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
langchain = "^0.0.285"
openai = "^0.28.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.0"
ruff = "^0.0.287"
mypy = "^1.5.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
